--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -115,7 +115,7 @@ html {
       }
 
       #menu_helper.toggled {
-        margin-left: calc(66% - 18px);
+        margin-left: calc(100% - 46px);
       }
 
       #main_menu.toggled {
